--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-</head>
-<body>
-    <h1>Welcome to the Server</h1>
-</body>
-</html>
+<%-include("layout/header")%>
+<main>
+  <h1>Welcome to the Home page</h1>
+</main>
+<%-include("layout/footer")%>
