--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -10,8 +10,8 @@
         <nav>
             <ul>
                 <li><a href="/">Home</a></li>
-                <li><a href="/register">Register</a></li>
-                <li><a href="/login">Login</a></li>
+                <li><a href="/Register">Register</a></li>
+                <li><a href="/Login">Login</a></li>
                 <li><a href="/Profile">Profile</a></li>
                 <li?><a href="/Logout">Logout</a></li>
             </ul>
