--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,7 +1,7 @@
 <%-include("layout/header")%>
 <main>
-  <h1>Register Page</h1>
-  <form action="/register" method="post">
+  <h1>Login Page</h1>
+  <form action="/login" method="post">
     <div>
       <label for="username">username: </label>
       <input type="text" id="username" name="username" />
@@ -12,7 +12,7 @@
       <input type="password" id="password" name="password" />
     </div>
     <br />
-    <button type="submit">Register</button>
+    <button type="submit">Login</button>
   </form>
 </main>
 <%-include("layout/footer")%>
